Feat: lets test locks in production